# bbdev

./: .gitignore  README.md  bbdev  flake.nix
api/: config.yaml  package.json  pnpm-lock.yaml  pyproject.toml
api/services/: workflow_tools.py
api/steps/bebop/: regression.py
api/tests/: _api_test_helper.py  test_all_api_serial.py  test_api_bebop_bemu_batch.py  test_api_bebop_bemu_build.py  test_api_bebop_bemu_sim.py  test_api_bebop_p2e_batch.py  test_api_bebop_p2e_buildbitstream.py  test_api_bebop_p2e_clean.py  test_api_bebop_p2e_runworkload.py  test_api_bebop_p2e_verilog.py  test_api_bebop_verilator_batch.py  test_api_bebop_verilator_build.py  test_api_bebop_verilator_clean.py  test_api_bebop_verilator_run.py  test_api_bebop_verilator_sim.py  test_api_bebop_verilator_verilog.py  test_api_compiler_build.py  test_api_dc_run.py  test_api_dc_synth.py  test_api_dc_verilog.py  test_api_firesim_buildbitstream.py  test_api_firesim_enumeratefpgas.py  test_api_firesim_infrasetup.py  test_api_firesim_runworkload.py  test_api_kernel_build.py  test_api_pegasus_buildbitstream.py  test_api_pegasus_flashbitstream.py  test_api_pegasus_runworkload.py  test_api_pegasus_verilog.py  test_api_sardine_run.py  test_api_verilator_build.py  test_api_verilator_clean.py  test_api_verilator_run.py  test_api_verilator_sim.py  test_api_verilator_verilog.py  test_api_workload_build.py  test_api_workload_build_trace.py  test_api_workload_clean.py  test_api_workload_tohex.py  test_api_yosys_run.py  (+2 more)
api/utils/: bemu.py  event_common.py  path.py  port.py  process.py  stream_run.py  yosys_log.py
(+165 files in other folders)
